--- a/css/index.css
+++ b/css/index.css
@@ -6,5 +6,5 @@
 
 .bgimage {
     position: absolute;
-    background-image: url(https://play.blooket.com/65a43218fd1cabe52bdf1cda34613e9e.png);
+    background-image: url(https://i.ibb.co/85BLg9N/image.png);
 }
