--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
 * {
-  background-color: #1c1c1d;
-  color: #c9c9c9;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .bgimage {
     position: absolute;
+    width: 1000px;
+    height: 1000px;
     background-image: url(https://i.ibb.co/85BLg9N/image.png);
 }
