--- a/css/index.css
+++ b/css/index.css
@@ -6,5 +6,5 @@
     position: absolute;
     width: 1000px;
     height: 1000px;
-    background-image: url(https://i.ibb.co/85BLg9N/image.png);
+    background-image: url(https://i.ibb.co/GFVBcFD/image.png);
 }
