--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,9 @@
 }
 
 .bgimage {
-    position: absolute;
+    position: cover;
     width: 1000px;
     height: 1000px;
     background-image: url(https://i.ibb.co/GFVBcFD/image.png);
+    background-repeat: no-repeat;
 }
