--- a/css/index.css
+++ b/css/index.css
@@ -3,9 +3,10 @@
 }
 
 .bgimage {
-    position: cover;
+    position: absolute;
     width: 1000px;
     height: 1000px;
     background-image: url(https://i.ibb.co/GFVBcFD/image.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
