--- a/css/index.css
+++ b/css/index.css
@@ -4,9 +4,10 @@
 
 .bgimage {
     position: absolute;
-    width: 1000px;
-    height: 1000px;
+    width: 1920px;
+    height: 1080px;
     background-image: url(https://i.ibb.co/GFVBcFD/image.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-attachment: fixed;
+    background-size: 100% 100%;
 }
