--- a/css/index.css
+++ b/css/index.css
@@ -2,12 +2,14 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.bgimage {
-    position: absolute;
-    width: 1920px;
-    height: 1080px;
-    background-image: url(https://i.ibb.co/GFVBcFD/image.png);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
+.background {
+    display: block;
+    min-height: 100%;
+    position: fixed;
+    width: 100%;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    top: 0;
+    left: 0;
+    background: linear-gradient(162.5deg, rgba(12,15,152,1) 0%, rgba(1,3,94,1) 100%);
 }
